# ice-providers

./: .gitignore  README.md  pyproject.toml
src/ice_providers/embeddings/: base.py
src/ice_providers/embeddings/gguf/: provider.py
src/ice_providers/embeddings/llamacpp/: provider.py
src/ice_providers/embeddings/mock/: __init__.py  provider.py
src/ice_providers/embeddings/ollama/: provider.py
src/ice_providers/embeddings/openai/: provider.py
src/ice_providers/embeddings/openai_compat/: provider.py
